--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "fastclick": "^1.0.6",
     "lib-flexible": "^0.3.2",
     "moment": "^2.15.1",
-    "vue": "^2.0.1",
-    "vue-awesome-swiper": "^2.1.0",
+    "axios": "^0.16.2",
+    "vue": "^2.4.2",
+    "vue-awesome-swiper": "^2.6.4",
     "vue-infinite-scroll": "^2.0.0",
     "vue-resource": "^1.0.3",
-    "vue-router": "^2.0.0",
-    "vuex": "^2.0.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.0",
+    "js-beautify": "1.6.14"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
