--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,5 @@
     }],
     "stage-2"
   ],
-  "plugins": [ "transform-object-rest-spread", "transform-vue-jsx", "transform-runtime"]
+  "plugins": ["transform-vue-jsx", "transform-runtime"]
 }
